--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="./img/logos32.png" sizes="32x32"/>
     <link rel="icon" type="image/png" href="./img/logos16.png" sizes="16x16"/>  
     <meta name="description" content="Portfolio Website Junior Frontend Developer Danil Kovalev"/>
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <div class="header__icon">
-                <img class="header__img" src="./img/btn-change.svg" alt="btn-change">
-            </div>
-        </header>
         <section class="information">
             <div class="information__logo">
                 <img class="information__img" src="./img/logo.svg" alt="logo">
@@ -53,28 +48,28 @@
             <div class="achievements__text">
                 <div class="achievements__text__one">
                     <h2 class="achievements__number">1</h2>
-                    <p class="achievements__title">Years of work<br>
-                        experience</p>
+                    <p class="achievements__title">Год опыта<br>
+                        создания проектов</p>
                 </div>
                 <div class="achievements__text__two">
-                    <h2 class="achievements__number">10+</h2>
-                    <p class="achievements__title">Finished<br>
-                        projects</p>
+                    <h2 class="achievements__number">15+</h2>
+                    <p class="achievements__title">Реализованных<br>
+                        проектов</p>
                 </div>
                 <div class="achievements__text__three">
                     <h2 class="achievements__number">5+</h2>
-                    <p class="achievements__title">Сompleted<br> 
-                        courses</p>
+                    <p class="achievements__title">Законченных<br> 
+                        курсов</p>
                 </div>
             </div>
         </section>
         <section class="button">
             <div class="button__block">
                 <button class="button__resume">
-                    <a class="button__text" href="./file/files.docx" download>Download resume</a>
+                    <a class="button__text" href="./file/resume.pdf" download>Скачать резюме</a>
                     <img class="button__img" src="./img/alement.png" alt="alement">
                 </button>
-                <button class="btn" data-path="form-popup">Contact me</button>
+                <button class="btn" data-path="form-popup">Контакты</button>
                 <div class="modals" style="z-index: 1;">
                     <div class="modal-overlay">
                         <div class="modal modal--1" data-target="form-popup">
@@ -84,14 +79,14 @@
                             <div class="modal--contact">
                                 <img src="./img/chat.svg" alt="chat">
                                 <div class="modal--contact--info">
-                                    <p class="modal--contact--info--email">Email:</p>
+                                    <p class="modal--contact--info--email">Почта:</p>
                                     <h3 class="modal--contact--info--numb">kovalev20030815@yandex.ru</h3>
                                 </div>
                             </div>
                             <div class="modal--phone">
                                 <img src="./img/iphone.svg" alt="iphone">
                                 <div class="modal--phone--info">
-                                    <p class="modal--phone--info--email">Phone:</p>
+                                    <p class="modal--phone--info--email">Телефон:</p>
                                     <h3 class="modal--phone--info--numb">+7-965-906-31-98</h3>
                                 </div>
                             </div>
@@ -104,10 +99,10 @@
             <div class="tabs__list">
                 <div class="tabs__background">
                     <div class="tabs__item">
-                        <button class="tabs__btn tabs__btn--style tabs__btn--active" data-tabs-path="main">Portfolio</button>
+                        <button class="tabs__btn tabs__btn--style tabs__btn--active" data-tabs-path="main">Портфолио</button>
                     </div>
                     <div class="tabs__item">
-                        <button class="tabs__btn tabs__btn--style" data-tabs-path="archive">Skills</button>
+                        <button class="tabs__btn tabs__btn--style" data-tabs-path="archive">Скиллы</button>
                     </div>
                 </div>
             </div>
@@ -131,51 +126,62 @@
                     <div class="portfolio__wrapper">
                         <a class="portfolio__wrapper__btn" href="https://enchanting-mousse-4db103.netlify.app"><img class="portfolio__wrapper__img" src="./img/photo6.png" alt="photo6"></a>
                     </div>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__wrapper__btn" href="https://phenomenal-capybara-d65947.netlify.app/"><img class="portfolio__wrapper__img" src="./img/photo7.png" alt="photo7"></a>
+                    </div>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__wrapper__btn" href="https://lustrous-crostata-5f38e7.netlify.app/"><img class="portfolio__wrapper__img" src="./img/photo8.png" alt="photo8"></a>
+                    </div>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__wrapper__btn" href="https://64aa4542af18156d447c3631--cerulean-puppy-51d095.netlify.app/"><img class="portfolio__wrapper__img" src="./img/photo9.png" alt="photo9"></a>
+                    </div>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__wrapper__btn" href="https://64aa47c322114675cf25113f--extraordinary-pudding-e34519.netlify.app/"><img class="portfolio__wrapper__img" src="./img/photo10.png" alt="photo10"></a>
+                    </div>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__wrapper__btn" href="https://64aa64b89a13937c124198ff--unique-paletas-3d74c5.netlify.app/"><img class="portfolio__wrapper__img" src="./img/photo11.png" alt="photo11"></a>
+                    </div>
                 </div>
             </div>
             <div class="tabs__content" data-tabs-target="archive">
                 <div class="content">
-                    <h3 class="content__text">My skills:</h3>
+                    <h3 class="content__text">Почему стоит взять именно меня?</h3>
                     <div class="faq">
                         <div class="faq__item">
-                            <button class="collapsible">My hard skills:</button>
+                            <button class="collapsible">Хард скиллс:</button>
                             <div class="conteiner">
                                 <ul style="margin-left: 20px;">
-                                    <li class="conteiner__text">English language (level B1)</li>
+                                    <li class="conteiner__text">Английский язык (уровень B1)</li>
                                     <li class="conteiner__text">Html5</li>
                                     <li class="conteiner__text">Css/Sass</li>
                                     <li class="conteiner__text">JavaScript</li>
                                     <li class="conteiner__text">React</li>
-                                    <li class="conteiner__text">Initial design skills</li>
-                                    <li class="conteiner__text">Creating photo and video content</li>
+                                    <li class="conteiner__text">Начальные навыки в дизайне</li>
+                                    <li class="conteiner__text">В прошлом фотограф/видеограф, самозанятый.</li>
                                 </ul>
                             </div>
-                            <button class="collapsible">My soft skills:</button>
+                            <button class="collapsible">Софт скиллс:</button>
                             <div class="conteiner">
                                 <ul style="margin-left: 20px;">
-                                    <li class="conteiner__text">Communicativeness</li>
-                                    <li class="conteiner__text">Creativity and flexibility</li>
-                                    <li class="conteiner__text">Discipline</li>
-                                    <li class="conteiner__text">Independence and hard work</li>
+                                    <li class="conteiner__text">Амбициозный</li>
+                                    <li class="conteiner__text">Общительный</li>
+                                    <li class="conteiner__text">Креативный</li>
+                                    <li class="conteiner__text">Отвественный</li>
+                                    <li class="conteiner__text">Трудолюбивый</li>
                                 </ul>
                             </div>
-                            <button class="collapsible">Work experience:</button>
+                            <button class="collapsible">Опыт работы:</button>
                             <div class="conteiner">
-                            <p class="conteiner__text">I have been studying frontend development for one year. During this time I had several commercial orders presented in the portfolio. I have no official work experience in the company at the moment.</p>
+                            <p class="conteiner__text">Я изучаю front-end разработку уже течение одного года. За это время в моем портфолио появилось несколько коммерческих заказов, а также ряд учебных проектов в ходе прохождения онлайн обучения. На данный момент у меня нет официального опыта работы в компании.</p>
                             </div>
-                        </div>
-                        <div class="faq__item">
-                            <button class="collapsible">Why should you hire me?</button>
-                            <div class="conteiner">
-                            <p class="conteiner__text">I think that the fundamental reason why I should be hired is a wild desire to give myself to this cause, develop projects from the beginning to the end and have a constant burst of energy for all this.</p>
                             </div>
-                            <button class="collapsible">My hobbies:</button>
+                            <button class="collapsible">Мои хобби:</button>
                             <div class="conteiner">
-                            <p class="conteiner__text">5-6 times a week I go to the gym, read foreign literature on business/psychology/economics, study English in online courses, and do photography.</p>
+                            <p class="conteiner__text">3-4 раз в неделю я хожу в спортзал, читаю зарубежную литературу по бизнесу/психологии/экономике, изучаю английский язык на онлайн-курсах и занимаюсь фотографией.</p>
                             </div>
-                            <button class="collapsible">My beliefs and goals:</button>
+                            <button class="collapsible">Мои убеждения и цели:</button>
                             <div class="conteiner">
-                            <p class="conteiner__text">My goal is to come to a certain standard of living, to be financially independent, to become the best in my business.</p>
+                            <p class="conteiner__text">Моя цель - стать одним из лучших в своей сфере и я этого добьюсь во что бы мне это не стало.</p>
                             </div>
                         </div>
                     </div>
@@ -184,7 +190,7 @@
         </section>
         <section class="footer">
             <div class="footer__text">
-                <p class="footer__title">© Danil Kovalev 2023 All rigths reserved</p>
+                <p class="footer__title">© Danil Kovalev 2023 Все права защищены</p>
             </div>
         </section>
     </div>
